--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <br>[Machine Building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./question.png" alt = "assignment completion status"> </image> 
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image> 
       <br>[Final Project](./13_finalproject/index.html)
     </div>
   </div>
